fixing hamburger menu item spacing and height, send button, and resize and re-orientation page reload

--- a/styles/main.css
+++ b/styles/main.css
@@ -373,13 +373,14 @@ textarea {
 }
 
 .fa-paper-plane {
-  border-style: none;
+    border-style: none;
+    text-align: center; 
 }
 
 .btn-send {
     text-align: center;
     border-radius: 5px;
-    width: 6%;
+    width: 40px;
     border-style: none;
     background-color: lightgray;
 }
@@ -436,12 +437,17 @@ textarea {
     }
     .hamburger-container {
         position: absolute;
+        background-color: transparent;
         overflow: auto;
         margin: auto;
         width: 56px;
         height: 56px;
         margin-right: 13.5px;
         top: 0; left: 0; bottom: 0; right: 0;
+    }
+    
+    .hamburger-container:active {
+        background-color: transparent;
     }
 
     .hamburger {
@@ -482,27 +488,27 @@ textarea {
         margin: auto;
     }
 
-    .hamburgerMenu ul {
+    .hamburgerList {
         margin: 0;
-        margin-top: 30%;
-        height: 94%;
+        margin-top: 20%;
+        height: 100%;
         width: 100%
         }
     
-    .hamburgerMenu li {
+    .menuItem {
         position: relative;
         display: block;
+        width: 146%;
         left: -35px;
         cursor: pointer;
-        width: 100%;
     }
 
     .hamburgerMenu li:nth-child(1), .hamburgerMenu li:nth-child(2), .hamburgerMenu li:nth-child(3), .hamburgerMenu li:nth-child(4) {
-        height: 24.4%;
+        height: 23%;
     }
 
-    .hamburgerMenu li a {
-        text-align: right;
+    .link {
+        text-align: center;
         text-decoration: none;
         font-family: 'Fredoka One', cursive;
         font-size: 140%;
